@@ -2431,8 +2431,8 @@ cupsdSendError(cupsd_client_t *con,	/* I - Connection */
       text = "";
 
     snprintf(message, sizeof(message),
-             "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0 Transitional//EN\" "
-	     "\"http://www.w3.org/TR/REC-html40/loose.dtd\">\n"
+             "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01 Transitional//EN\" "
+	     "\"http://www.w3.org/TR/REC-html4/loose.dtd\">\n"
 	     "<HTML>\n"
 	     "<HEAD>\n"
              "\t<META HTTP-EQUIV=\"Content-Type\" "
